Implement safe sorting and fix pagination handling